2.32.0 (2025-07-23)
-----------------------------
* [New]Widget Snapping
  - Add widget snapping and alignment (implemented by @nikidigi), which allows to snap and align widget to other widgets or screen edges. Snapping is activated by holding down "Ctrl" key while moving widget.
  - Add "snap_distance" and "snap_gap" options in global user config, which can be accessed from "Config > Application" in main menu.
  - Add Right-Click "context menu" for each overlay widget, which enables additional options:
    Center horizontally: align widget to the center of active screen horizontally.
    Center vertically: align widget to the center of active screen vertically.

* Lap time history Widget
  - Now loads and shows lap history data from corresponding "Consumption History" file.

* Standings Widget
  - Renamed "show_time_gap_from_class_best" option to "show_time_gap_from_same_class", which now also shows time gap behind the same class leader in race session (requested by user "ssalamon"). This option is enabled by default, and only takes effect while `enable_multi_class_split_mode` is enabled.
  - Fixed a calculation error with time interval between each driver.

* RestAPI Module
  - Add individual hard-coded "minimum update interval" for each different url resources, where some resources are accessed less frequently than others for conserving resource.
  - Fixed an issue where accessing extremely large dataset may fail sometimes.

* Stats Module
  - Fixed an issue that would cause incorrect best lap time saved due to network desync.

* Misc
  - Updated README with pyside2 (qtmultimedia) dependency info for Linux (by @berarma).
  - Add new contributor "nikidigi" to contributors.md.
  - Various optimization.

2.31.0 (2025-07-08)
-----------------------------
* Fuel Calculator
  - [New]Add "Tyre" column to history table, which lists "average tyre tread wear" data that can be used for tyre wear calculation.