@@ -20,6 +20,8 @@
 Vehicle brand editor
 """
 
+from __future__ import annotations
+
 import asyncio
 import json
 import logging
@@ -91,8 +93,11 @@ class VehicleBrandEditor(BaseEditor):
         import_rf2 = import_menu.addAction("RF2 Rest API")
         import_rf2.triggered.connect(self.import_from_rf2)
 
-        import_lmu = import_menu.addAction("LMU Rest API")
+        import_lmu = import_menu.addAction("LMU Rest API (Primary)")
         import_lmu.triggered.connect(self.import_from_lmu)
+
+        import_lmu_alt = import_menu.addAction("LMU Rest API (Alternative)")
+        import_lmu_alt.triggered.connect(self.import_from_lmu_alt)
 
         import_json = import_menu.addAction("JSON file")
         import_json.triggered.connect(self.import_from_file)
@@ -149,27 +154,33 @@ class VehicleBrandEditor(BaseEditor):
 
     def import_from_rf2(self):
         """Import brand from RF2"""
-        self.import_from_restapi("RF2")
+        self.import_from_restapi(
+            "RF2",
+            cfg.user.setting["module_restapi"]["url_port_rf2"],
+            "/rest/race/car",
+        )
 
     def import_from_lmu(self):
-        """Import brand from LMU"""
-        self.import_from_restapi("LMU")
+        """Import brand from LMU (primary source)"""
+        self.import_from_restapi(
+            "LMU",
+            cfg.user.setting["module_restapi"]["url_port_lmu"],
+            "/rest/race/car",
+        )
 
-    def import_from_restapi(self, sim_name: str):
+    def import_from_lmu_alt(self):
+        """Import brand from LMU (alternative source)"""
+        self.import_from_restapi(
+            "LMU",
+            cfg.user.setting["module_restapi"]["url_port_lmu"],
+            "/rest/sessions/getAllVehicles",
+        )
+
+    def import_from_restapi(self, sim_name: str, url_port: int, resource_name: str):
         """Import brand from Rest API"""
-        config = cfg.user.setting["module_restapi"]
-        if sim_name == "LMU":
-            url_port = config["url_port_lmu"]
-            resource_name = "/rest/sessions/getAllVehicles"
-        elif sim_name == "RF2":
-            url_port = config["url_port_rf2"]
-            resource_name = "/rest/race/car"
-        else:
-            return
-
-        url_host = config["url_host"]
-        time_out = 3
+        url_host = cfg.user.setting["module_restapi"]["url_host"]
         request_header = set_header_get(resource_name, url_host)
+        time_out = 3
 
         try:
             raw_veh_data = asyncio.run(get_response(request_header, url_host, url_port, time_out))
@@ -197,7 +208,6 @@ class VehicleBrandEditor(BaseEditor):
             with open(filename_full, "r", encoding="utf-8") as jsonfile:
                 dict_vehicles = json.load(jsonfile)
                 self.parse_brand_data(dict_vehicles)
-
         except (AttributeError, IndexError, KeyError, TypeError,
                 FileNotFoundError, ValueError, OSError):
             logger.error("Failed importing %s", filename_full)
